cliente e consultoria controllers

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,5 +1,10 @@
+# DB configuration
 spring.datasource.url=jdbc:mariadb://localhost:3306/springbootdb
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
+
+# Docs configuration
+springdoc.swagger-ui.path=/docs
+springdoc.swagger-ui.operationsSorter=method
