--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -4,7 +4,12 @@ spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 
 # Docs configuration
 springdoc.swagger-ui.path=/docs
 springdoc.swagger-ui.operationsSorter=method
+
+# Error handling
+server.error.include-stacktrace=never
